--- a/frontend/angular-ecommerce/src/app/components/product-list-component/product-list-grid.component.html
+++ b/frontend/angular-ecommerce/src/app/components/product-list-component/product-list-grid.component.html
@@ -14,6 +14,11 @@
                     </div>
                     
                 </div>
+                <div *ngIf="products?.length == 0"
+                 class="alert alert-warning col-md-12"
+                 role = 'alert'>
+                       No products found
+                </div>
             </div>
         </div>
     </div>
