--- a/frontend/angular-ecommerce/src/app/components/product-details/product-details.component.html
+++ b/frontend/angular-ecommerce/src/app/components/product-details/product-details.component.html
@@ -8,6 +8,7 @@
         <hr>
         <h4>Description</h4>
         <p>{{product.description}}</p>
+        <a [routerLink]="['/products']" routerLinkActive="router-link-active" class="mt-5">Go back to product list</a> 
     </div>
 </div>
 </div>
