--- a/frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -7,8 +7,11 @@
                 <!--loop over the collection of products-->
                 <div *ngFor="let product of products" class="col-md-3">
                     <div class="product-box">
-                        <a routerLink="/products/{{product.id}}"><img src="{{product.imageUrl}}" class="img-responsive" alt=""></a>
-                        <a routerLink="/products/{{product.id}}"><h1 style="font-size: 20px;">{{product.name}}</h1></a>
+                        <a routerLink="/products/{{product.id}}"><img src="{{product.imageUrl}}" class="img-responsive"
+                                alt=""></a>
+                        <a routerLink="/products/{{product.id}}">
+                            <h1 style="font-size: 20px;">{{product.name}}</h1>
+                        </a>
                         <div class="price">{{product.unitPrice | currency:'USE'}}</div>
                         <a href="#" class="primary-btn">Add to cart</a>
                     </div>
@@ -18,6 +21,42 @@
                     No products found
                 </div>
             </div>
+
+            <div class="footer-pagination">
+
+                <div class="row">
+
+                    <div class="col-md-6"></div>
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-md-9" style="padding-left: 30%;">
+                                <ngb-pagination [(page)]="thePageNumber" 
+                                                [pageSize]="thePageSize"
+                                                [collectionSize]="theTotalElements" 
+                                                [maxSize]="4"
+                                                [boundaryLinks]="true"
+                                                (pageChange)="listProducts()">
+
+                                </ngb-pagination>
+                                
+                            </div>
+                            <div class="col-md-3 mt-2" style="text-align: right;">
+                                <span class="mr-2">Page size</span>
+                                <select (change)="updatePageSize($any($event.target).value)">
+                                    <option selected="true">5</option>
+                                    <option >10</option>
+                                    <option >15</option>
+                                    <option >20</option>
+                                </select>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
         </div>
     </div>
 </div>
