--- a/frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -12,8 +12,8 @@
                         <a routerLink="/products/{{product.id}}">
                             <h1 style="font-size: 20px;">{{product.name}}</h1>
                         </a>
-                        <div class="price">{{product.unitPrice | currency:'USE'}}</div>
-                        <a href="#" class="primary-btn">Add to cart</a>
+                        <div class="price">{{product.unitPrice | currency:'USD'}}</div>
+                        <button (click)="addCart(product)" class="btn btn-primary btn-sm">Add to cart</button>
                     </div>
 
                 </div>
