add to cart from details view

--- a/frontend/angular-ecommerce/src/app/components/product-details/product-details.component.html
+++ b/frontend/angular-ecommerce/src/app/components/product-details/product-details.component.html
@@ -4,7 +4,7 @@
         <img src="{{product.imageUrl}}" alt="" class="detail-img">
         <h3>{{product.name}}</h3>   
         <div class="price">{{product.unitPrice | currency:'USD'}}</div>
-        <a href="#" class="primary-btn">Add to cart</a>
+        <button (click)="addCart()" class="btn btn-primary btn-sm">Add to cart</button>
         <hr>
         <h4>Description</h4>
         <p>{{product.description}}</p>
