--- a/frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -39,8 +39,10 @@
                         <div class="col-md-2"><Label>Country: </Label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select name="" id="" formControlName="country">
-                                    <option value="">TO DO</option>
+                                <select name="" id="" formControlName="country" (change)="getStates('shippingAddress')">
+                                    <option *ngFor="let country of countries" [ngValue]=country>
+                                        {{country.name}}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -66,7 +68,9 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select name="" id="" formControlName="state">
-                                    <option value=""> TODO</option>
+                                    <option *ngFor="let state of shippingAddressStates" [ngValue]="state">
+                                        {{state.name}}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -97,8 +101,10 @@
                         <div class="col-md-2"><Label>Country: </Label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select name="" id="" formControlName="country">
-                                    <option value="">TO DO</option>
+                                <select name="" id="" formControlName="country" (change)="getStates('billingAddress')">
+                                    <option *ngFor="let country of countries" [ngValue]="country">
+                                        {{country.name}}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -124,7 +130,9 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select name="" id="" formControlName="state">
-                                    <option value=""> TODO</option>
+                                    <option *ngFor="let state of billingAddressStates" [ngValue]="state">
+                                        {{state.name}}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -182,7 +190,9 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select formControlName="expirationMonth">
-                                    <option value="">TODO</option>
+                                    <option *ngFor="let theMonth of creditCardMonths" >
+                                        {{theMonth}}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -191,8 +201,10 @@
                         <div class="col-md-2"><Label>Expiration year: </Label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="expirationYear">
-                                    <option value="">TODO</option>
+                                <select formControlName="expirationYear" (change)="handleMonthsAndYears()">
+                                    <option *ngFor="let theYear of creditCardYears" >
+                                        {{theYear}}
+                                    </option>
                                 </select>
                             </div>
                         </div>
