--- a/frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -10,6 +10,16 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input type="text" formControlName="firstName">
+                                <div *ngIf="firstName.invalid &&(firstName.dirty || firstName.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div *ngIf="firstName.errors['required'] || firstName.errors['notOnlyWhiteSpace']">
+                                        First name is required
+                                    </div>
+                                    <div *ngIf="firstName.errors['minlength']">
+                                        First name must be at least 2 characters long
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -19,6 +29,16 @@
                             <div class="input-space">
 
                                 <input type="text" formControlName="lastName">
+                                <div *ngIf="lastName.invalid && (lastName.dirty || lastName.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div *ngIf="lastName.errors['notOnlyWhiteSpace'] || lastName.errors['required']">
+                                        Last name is required
+                                    </div>
+                                    <div *ngIf="lastName.errors['minlength']">
+                                        Last name must be at least 2 characters long
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -27,6 +47,16 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input type="email" formControlName="email">
+                                <div *ngIf="email.invalid && (email.dirty || email.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div *ngIf="email.errors['required']">
+                                        Email is required
+                                    </div>
+                                    <div *ngIf="email.errors['pattern']">
+                                        Email must be a valid email format
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
 
@@ -44,6 +74,12 @@
                                         {{country.name}}
                                     </option>
                                 </select>
+                                <div *ngIf="shippingAddressCountry.invalid &&(shippingAddressCountry.dirty || shippingAddressCountry.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div *ngIf="shippingAddressCountry.errors['required']">
+                                        Country is required
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -53,6 +89,16 @@
                             <div class="input-space">
                                 <input type="text" formControlName="street">
                             </div>
+                            <div *ngIf="billingAddressStreet.invalid && (shippingAddressStreet.dirty || shippingAddressStreet.touched)"
+                                class="alert alert-danger mt-1">
+                                <div
+                                    *ngIf="shippingAddressStreet.errors['notOnlyWhiteSpace'] || shippingAddressStreet.errors['required']">
+                                    Street is required
+                                </div>
+                                <div *ngIf="shippingAddressStreet.errors['minlength']">
+                                    Street must be at least 2 characters long
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="row">
@@ -60,6 +106,16 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input type="text" formControlName="city">
+                            </div>
+                            <div *ngIf="shippingAddressCity.invalid && (shippingAddressCity.dirty || shippingAddressCity.touched)"
+                                class="alert alert-danger mt-1">
+                                <div
+                                    *ngIf="shippingAddressCity.errors['notOnlyWhiteSpace'] || shippingAddressCity.errors['required']">
+                                    City is required
+                                </div>
+                                <div *ngIf="shippingAddressCity.errors['minlength']">
+                                    City must be at least 2 characters long
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -72,6 +128,12 @@
                                         {{state.name}}
                                     </option>
                                 </select>
+                                <div *ngIf="shippingAddressState.invalid && (shippingAddressState.dirty || shippingAddressState.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div *ngIf="shippingAddressState.errors['required']">
+                                        State is required
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -80,6 +142,16 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input type="text" formControlName="zipCode">
+                                <div *ngIf="shippingAddressZipCode.invalid && (shippingAddressZipCode.dirty || shippingAddressZipCode.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div
+                                        *ngIf="shippingAddressZipCode.errors['notOnlyWhiteSpace'] || shippingAddressZipCode.errors['required']">
+                                        ZipCode is required
+                                    </div>
+                                    <div *ngIf="shippingAddressZipCode.errors['minlength']">
+                                        ZipCode must be at least 2 characters long
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -106,6 +178,12 @@
                                         {{country.name}}
                                     </option>
                                 </select>
+                                <div *ngIf="billingAddressCountry.invalid &&(billingAddressCountry.dirty || billingAddressCountry.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div *ngIf="billingAddressCountry.errors['required']">
+                                        Country is required
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -115,6 +193,16 @@
                             <div class="input-space">
                                 <input type="text" formControlName="street">
                             </div>
+                            <div *ngIf="billingAddressStreet.invalid && (billingAddressStreet.dirty || billingAddressStreet.touched)"
+                                class="alert alert-danger mt-1">
+                                <div
+                                    *ngIf="billingAddressStreet.errors['notOnlyWhiteSpace'] || billingAddressStreet.errors['required']">
+                                    Street is required
+                                </div>
+                                <div *ngIf="billingAddressStreet.errors['minlength']">
+                                    Street must be at least 2 characters long
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="row">
@@ -122,6 +210,16 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input type="text" formControlName="city">
+                            </div>
+                            <div *ngIf="billingAddressCity.invalid && (billingAddressCity.dirty || billingAddressCity.touched)"
+                                class="alert alert-danger mt-1">
+                                <div
+                                    *ngIf="billingAddressCity.errors['notOnlyWhiteSpace'] || billingAddressCity.errors['required']">
+                                    City is required
+                                </div>
+                                <div *ngIf="billingAddressCity.errors['minlength']">
+                                    City must be at least 2 characters long
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -134,6 +232,13 @@
                                         {{state.name}}
                                     </option>
                                 </select>
+                                <div *ngIf="billingAddressState.invalid && (billingAddressState.dirty || billingAddressState.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div *ngIf="billingAddressState.errors['required']">
+                                        State is required
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -142,6 +247,16 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input type="text" formControlName="zipCode">
+                            </div>
+                            <div *ngIf="billingAddressZipCode.invalid && (billingAddressZipCode.dirty || billingAddressZipCode.touched)"
+                                class="alert alert-danger mt-1">
+                                <div
+                                    *ngIf="billingAddressZipCode.errors['notOnlyWhiteSpace'] || billingAddressZipCode.errors['required']">
+                                    Zip Code is required
+                                </div>
+                                <div *ngIf="billingAddressZipCode.errors['minlength']">
+                                    Zip Code must be at least 2 characters long
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -158,6 +273,12 @@
                                     <option value="">MASTER CARD</option>
                                     <option value="">DEBIT CARD</option>
                                 </select>
+                                <div *ngIf="cardType.invalid && (cardType.dirty || cardType.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div *ngIf="cardType.errors['required']">
+                                        Card type is required
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -167,6 +288,16 @@
                             <div class="input-space">
                                 <input type="text" formControlName="nameOnCard">
                             </div>
+                            <div *ngIf="nameOnCard.invalid && (nameOnCard.dirty || nameOnCard.touched)"
+                                class="alert alert-danger mt-1">
+                                <div
+                                    *ngIf="nameOnCard.errors['notOnlyWhiteSpace'] || nameOnCard.errors['required']">
+                                    Name on card is required
+                                </div>
+                                <div *ngIf="nameOnCard.errors['minlength']">
+                                    Name on card must be at least 2 characters long
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="row">
@@ -174,6 +305,16 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input type="text" formControlName="cardNumber">
+                            </div>
+                            <div *ngIf="cardNumber.invalid && (cardNumber.dirty || cardNumber.touched)"
+                                class="alert alert-danger mt-1">
+                                <div
+                                    *ngIf="cardNumber.errors['required']">
+                                    Card number is required
+                                </div>
+                                <div *ngIf="cardNumber.errors['pattern']">
+                                    Card number must be 16 digits long
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -183,6 +324,16 @@
                             <div class="input-space">
                                 <input type="text" formControlName="securityCode">
                             </div>
+                            <div *ngIf="securityCode.invalid && (securityCode.dirty || securityCode.touched)"
+                                class="alert alert-danger mt-1">
+                                <div
+                                    *ngIf="securityCode.errors['required']">
+                                    Security code is required
+                                </div>
+                                <div *ngIf="securityCode.errors['pattern']">
+                                    Security code must be 16 digits long
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="row">
@@ -190,7 +341,7 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select formControlName="expirationMonth">
-                                    <option *ngFor="let theMonth of creditCardMonths" >
+                                    <option *ngFor="let theMonth of creditCardMonths">
                                         {{theMonth}}
                                     </option>
                                 </select>
@@ -202,7 +353,7 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select formControlName="expirationYear" (change)="handleMonthsAndYears()">
-                                    <option *ngFor="let theYear of creditCardYears" >
+                                    <option *ngFor="let theYear of creditCardYears">
                                         {{theYear}}
                                     </option>
                                 </select>
